<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.register.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/edit_real_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="32"
            android:text="@string/real_name" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            tools:ignore="Autofill"
            android:hint="@string/input_real_name"/>

        <TextView
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_email" />

        <EditText
            android:id="@+id/editTextTextEmailAddress2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:maxLength="32"
            android:inputType="textEmailAddress"
            tools:ignore="Autofill"
            android:hint="@string/input_email"/>

        <TextView
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_password" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:maxLength="64"
            android:inputType="textPassword"
            tools:ignore="Autofill"
            android:hint="@string/input_password"/>

        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_register"
            android:background="@color/buttonBule"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>