<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_work">

    <fragment
        android:id="@+id/navigation_work"
        android:name="com.wxj.ui.work.WorkFragment"
        android:label="@string/title_work"
        tools:layout="@layout/fragment_work" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.wxj.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_add_notifications"
            app:destination="@id/navigation_add_notifications" />
    </fragment>

    <fragment
        android:id="@+id/navigation_contactpeople"
        android:name="com.wxj.ui.contactPeople.ContactPeopleFragment"
        android:label="@string/title_contactpeople"
        tools:layout="@layout/fragment_contactpeople" >
        <action
            android:id="@+id/action_navigation_contactpeople_to_navigation_contact_list"
            app:destination="@id/navigation_contact_list" />
    </fragment>

    <fragment
        android:id="@+id/navigation_me"
        android:name="com.wxj.ui.me.MeFragment"
        android:label="@string/title_me"
        tools:layout="@layout/fragment_me" >
        <action
            android:id="@+id/action_navigation_me_to_navigation_about"
            app:destination="@id/navigation_about" />
        <action
            android:id="@+id/action_navigation_me_to_navigation_user_information"
            app:destination="@id/navigation_user_information" />
        <action
            android:id="@+id/action_navigation_me_to_navigation_change_password"
            app:destination="@id/navigation_change_password" />
        <action
            android:id="@+id/action_navigation_me_to_navigation_register_company"
            app:destination="@id/navigation_register_company" />
        <action
            android:id="@+id/action_navigation_me_to_navigation_join_company"
            app:destination="@id/navigation_join_company" />
    </fragment>

    <fragment
        android:id="@+id/navigation_user_information"
        android:name="com.wxj.ui.userinformation.UserInformationFragment"
        android:label="@string/user_information"
        tools:layout="@layout/user_information_fragment">
        <action
            android:id="@+id/action_navigation_user_information_to_navigation_me"
            app:destination="@id/navigation_me" />
        <action
            android:id="@+id/action_navigation_user_information_to_navigation_change_user_information2"
            app:destination="@id/navigation_change_user_information" />
    </fragment>

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.wxj.ui.about.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about">
        <action
            android:id="@+id/action_navigation_about_to_navigation_me"
            app:destination="@id/navigation_me" />
    </fragment>
    <fragment
        android:id="@+id/navigation_change_password"
        android:name="com.wxj.ui.changePassword.ChangePasswordFragment"
        android:label="@string/change_password"
        tools:layout="@layout/change_password_fragment">
        <action
            android:id="@+id/action_navigation_change_password_to_navigation_me"
            app:destination="@id/navigation_me" />
    </fragment>
    <fragment
        android:id="@+id/navigation_contact_list"
        android:name="com.wxj.ui.contactsList.ContactsListFragment"
        android:label="@string/add_contact"
        tools:layout="@layout/contacts_list_fragment">
        <action
            android:id="@+id/action_navigation_contact_list_to_navigation_contactpeople"
            app:destination="@id/navigation_contactpeople" />
    </fragment>
    <fragment
        android:id="@+id/navigation_forget_password"
        android:name="com.wxj.ui.forgetPassword.ForgetPasswordFragment"
        android:label="@string/action_forget_password"
        tools:layout="@layout/fragment_forget_password"/>
    <fragment
        android:id="@+id/navigation_register_company"
        android:name="com.wxj.ui.register.RegisterCompanyFragment"
        android:label="@string/register_company"
        tools:layout="@layout/fragment_register_company">
        <action
            android:id="@+id/action_navigation_register_company_to_navigation_me"
            app:destination="@id/navigation_me" />
    </fragment>
    <fragment
        android:id="@+id/navigation_join_company"
        android:name="com.wxj.ui.joinCompany.JoinCompanyFragment"
        android:label="@string/join_company"
        tools:layout="@layout/fragment_join_company">
        <action
            android:id="@+id/action_navigation_join_company_to_navigation_me"
            app:destination="@id/navigation_me" />
    </fragment>

    <fragment
        android:id="@+id/navigation_on_working"
        android:name="com.wxj.ui.work.OnWorkingFragment"
        tools:layout="@layout/on_working_fragment"/>

    <fragment
        android:id="@+id/navigation_finished_work"
        android:name="com.wxj.ui.work.FinishedWorkFragment"
        tools:layout="@layout/finished_work_fragment"/>

    <fragment
        android:id="@+id/navigation_add_notifications"
        android:name="com.wxj.ui.notifications.AddNotificationsFragment"
        tools:layout="@layout/fragment_add_notifications">
        <action
            android:id="@+id/action_navigation_add_notifications_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
    </fragment>

    <fragment
        android:id="@+id/navigation_change_user_information"
        android:name="com.wxj.ui.userinformation.ChangeUserInformationFragment"
        tools:layout="@layout/fragment_change_user_information">
        <action
            android:id="@+id/action_navigation_change_user_information_to_navigation_user_information2"
            app:destination="@id/navigation_user_information" />
    </fragment>
</navigation>