<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.changePassword.ChangePasswordFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_old_password"
            android:textSize="25sp"
            android:background="@color/textViewColor"/>

        <EditText
            android:id="@+id/input_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_new_password"
            android:textSize="25sp"
            android:background="@color/textViewColor"/>

        <EditText
            android:id="@+id/input_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/change_password_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/determine"
            android:background="@color/buttonBule"/>

    </LinearLayout>

</FrameLayout>